# Pyzam

./: .gitignore  LICENSE.txt  README.md  environment.yml  live-recog-gui.py  live-recog.py  mixtape_dp-live_11sec.csv  mixtape_dp-live_12sec.csv  proxy.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  st-app.py  streamlit.py  test.py
_file-recog-dev/: _file_recog.py
_live-recog-dev/: _live_recog.py  identify.py
fastapi/: README.md  main.py
file-recog-dev/: _file_recog.py  file_recog.py
file-recog-ver/: file-recog.py
live-recog-dev/: _live_recog-gui.py  record.py
music-env/: pyvenv.cfg
music-env/Scripts/: activate  activate.bat
pyzam/: __main__.py  identify.py  record.py
