[metadata]
name = pyzam
version = 0.1
author = Luka Filipović
description = A FREE CLI music recognition tool using python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, music, shazam,
licence = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = pyzam
python_requires = >=3.9
install_requires =
    asyncio==3.4.3
    rich==13.7.1
    soundfile==0.12.1
    shazamio==0.5.1
    SoundCard==0.4.3

[options.package_data]
    file: README.md, LICENSE.txt

[options.entry_points]
console_scripts =
    zotify = pyzam.__main__:main